@@ -1,1 +1,1 @@
-# Include hook code here
+require File.join(File.dirname(__FILE__), 'rails', 'init')
