@@ -20,4 +20,21 @@ require 'helperful/deprecations'
 
 
 module Helperful
+
+  module ControllerMixin
+
+    def helperful(*args, &block)
+      args.flatten.each do |arg|
+        case arg
+          when String, Symbol
+            file_name = 'helperful/' + arg.to_s.underscore
+            helper(file_name)
+          else
+            helper(arg, &block)
+        end
+      end
+    end
+
+  end
+
 end
